add joemicheals.com project
also organized {less} files

--- a/css/1080.less
+++ b/css/1080.less
@@ -60,17 +60,10 @@ i.icon-linkedin {
 .project_details_major_exploration,
 .project_details_homeconnect,
 .project_details_giddy_throng,
-.project_details_earthship_seattle {
+.project_details_earthship_seattle,
+.project_details_joemicheals {
 	.projectDetails1080;
 }
-
-/*.long-text {
-	font-size:0.75em;
-}*/
-
-/*.long-text h1 {
-	font-size:2em;	
-}*/
 
 #page-nan #nav-sub-nan,
 #page-mark #nav-sub-mark,
@@ -79,7 +72,15 @@ i.icon-linkedin {
 #page-major-exploration #nav-sub-major-exploration,
 #page-homeconnect #nav-sub-homeconnect,
 #page-giddy-throng #nav-sub-giddy-throng,
-#page-earthship-seattle #nav-sub-earthship-seattle {
+#page-earthship-seattle #nav-sub-earthship-seattle,
+#page-joemicheals #nav-sub-joemicheals {
 	font-size: 1.3em;
 	line-height:1.4em;
+}
+
+#header-joemicheals h1 {
+   font-size: 2.5em;
+   width:820px;
+   position: relative;
+   top:20px;
 }
