--- a/css/mobile.less
+++ b/css/mobile.less
@@ -31,7 +31,6 @@ img {
 p {
 	margin-bottom:.5em;
 	padding:0 0 0 0;
-	font-family: "Open Sans";
 }
 
 a:link,
@@ -112,14 +111,13 @@ ul li ul {
 	height:100%;
 	top:0;
 	left:0;	
-
 	min-height: 100vh;
 }
 
 /*** END GLOBAL SELECTORS ***/
 
 /* VARIABLES */
-//@majorExplorationColor: #B3B3B4;
+/* @majorExplorationColor: #B3B3B4; */
 /* END VARIABLES */
 
 /* MIXINS */
@@ -174,6 +172,7 @@ ul li ul {
 		padding-bottom:.3em;
 	}
 }
+/* END MIXINS */
 
 /*** FUNCTIONS ***/
 /*** END FUNCTIONS ***/
@@ -182,7 +181,7 @@ ul li ul {
 #home-page-container {
 	width:100%;
 	margin:auto;
-	// margin-bottom:100px;		
+	/* margin-bottom:100px;	*/	
 }
 
 .header-main {
@@ -219,10 +218,7 @@ ul li ul {
 
 i.icon-email {
 	float:left;
-	/* margin-left:4.16666667%; */ 
-	 /*width:42.85714286%; */
-	 /*max-width:180px;*/
-	 font-size:1.4em;	
+	font-size:1.4em;	
 }
 
 i.icon-linkedin {
@@ -244,19 +240,11 @@ i.icon-linkedin {
 	font-size:1.4em;
 	margin-top:.85em;
 }
-
-/*** END HOME ***/
+/*** END HOME PAGE ***/
 
 .section-label {
 	font-size:1.55em;
 	margin: 15px 0 10px 10px;	
-}
-
-#page-contact .section-label {
-	/*margin-top: 15px;
-	margin-right: 10px;
-	margin-bottom: 5px;	*/
-	/*margin-left: 0;*/
 }
 
 #page-contact .header-main,
@@ -273,11 +261,11 @@ h2 {
 }
 
 /*** PROJECT PAGE - ALL RECTANGLE ICONS ***/
-#page-projects {
-	/*display:none;	*/
+/*#page-projects {
 	visibility:visible;
-}
+}*/
 
+/*** PROJECT PAGE ICONS & PROJECT HEADERS ***/
 /* numbering system - development only */
 .projectDiv { 
 	display:none;	
@@ -335,9 +323,6 @@ header#header-giddy-throng img {
 }
 
 #major-exploration {
- 	/* background-color:tint(#b3b3b4, 80%); */
-	/*background-color:lighten(#b3b3b4, 80%);*/
-	/*background-color: desaturate(@majorExplorationColor, 80%);*/
 	background-color: #B3B3B5;
 }
 
@@ -346,13 +331,6 @@ header#header-homeconnect {
 }
 
 header#header-major-exploration {
-  /*background-color:tint(#B3B3B3, 80%);*/
-  /* background-color:lighten(#b3b3b4, 80%); */
-  /* hsl(hue, saturation%, lightness%); */
-  /*background-color:desaturate(#b3b3b4, 10%);*/
-  /*border:1px solid #808080;*/
- /* background-color: desaturate(@majorExplorationColor, 80%);*/
- /*background: lighten(@majorExplorationColor, 80%);*/
  	background-color: #B3B3B5;
  	overflow:hidden;
 }
@@ -365,8 +343,53 @@ header#header-major-exploration {
 }
 
 header#header-giddy-throng {
-  background:#262626;
-  padding: 20px 0 20px 5px;
+    background:#262626;
+    padding: 20px 0 20px 5px;
+}
+
+header#header-joemicheals {
+	height:100px;
+	background-repeat:no-repeat;
+}
+
+#header-joemicheals {
+	/* fallback color */
+	background-color:#6F848D; /* original greyish blue background color */
+	/* Firefox 3.6+ */
+	background-image: -moz-linear-gradient(#01161E, #DCF1FB);
+	/* Safari 4+, Chrome 1+ */
+	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#01161E), to(#DCF1FB));
+	/* Safari 5.1+, Chrome 10+ */
+	background-image: -webkit-linear-gradient(#01161E, #DCF1FB); 
+	/* Opera 11.10+ */
+	background-image: -o-linear-gradient(#01161E, #DCF1FB);
+	height: 100%;
+	/* This line is the money code, and not in Duckett CSS3: Gradients */
+	/* background-attachment: fixed;	*/
+}
+
+#header-joemicheals h1 {
+   display: none; 
+}
+
+#header-joemicheals h1.fold {
+   display:block;
+   font-size:1.5em;
+   color:#FFF;	
+   margin-left: 6px;
+   width:320px;
+   position: relative;
+   top: 15px;
+   padding: 5px 5px 5px 5px;
+   background: #000;
+}
+
+.yellow-flair {
+   color: #FFCB39;
+}
+
+#vo {	  
+	  background-color: #000;  
 }
 
 #vo h2.cover {
@@ -400,7 +423,6 @@ header#header-giddy-throng {
 
 #re-create a {
 	text-decoration:none;
-	/*border-bottom:none;*/
 	overflow:hidden;
 }
 
@@ -414,6 +436,7 @@ header#header-giddy-throng {
 #home-connect .cover {
 	display:none;	
 }
+/*** END PROJECT PAGE ICONS & PROJECT HEADERS ***/
 
 /*** PROJECT PAGES ***/
 .menu-content {
@@ -431,9 +454,9 @@ header#header-giddy-throng {
 #content-area-major-exploration,
 #content-area-homeconnect,
 #content-area-giddy-throng,
-#content-area-earthship-seattle {
+#content-area-earthship-seattle,
+#content-area-joemicheals {
 	width:96%;
-	/*border: 3px solid grey;*/
 	margin-left:auto;
 	margin-right:auto;
 }
@@ -446,14 +469,14 @@ header#header-giddy-throng {
 .project_details_major_exploration,
 .project_details_homeconnect,
 .project_details_giddy_throng,
-.project_details_earthship_seattle {
+.project_details_earthship_seattle,
+.project_details_joemicheals {
 	.projectDetailsMobile;
 }
 
 header#reCreate {
 	background-color:#C9D5DB;
 	overflow:hidden;	
-	/*margin-top:5%;*/
 }
 
 header#header-trombone {
@@ -461,9 +484,9 @@ header#header-trombone {
 	height:110px;
 	background-image: url("../images/wavelength-gold-on-green-481x110px-outerglow-2.png");
 }
+/*** END PROJECT PAGES ***/
 
 /*** MOBILE MAIN NAV ***/
-
 nav {
 	/*display:none;*/
 	position:fixed;
@@ -473,30 +496,19 @@ nav {
 	bottom:0;
 	margin:auto;
 	/*visibility:visible;	*/
-	/*background-color:#565656;*/
 	background-color:#4D4D4D;
-	/*padding-left:15%;*/
-	/*padding-right:15%;*/
 }
 
 nav ul {
 	list-style-type:none;
 	width:320px;
 	margin:auto;
-	/*padding:1% 0;*/
-	/*padding-bottom:3%;
-	padding-top:3%;*/
 	padding-left: 0; /* removes global style */
 }
 
 nav ul li {
 	float:left;
-	/*padding-right:1%;*/
-	/*padding-right:5px;*/
-	/*padding-left:5px;*/
 	font-size:.85em;
-	/*padding-bottom:1%;
-	padding-top:1%;*/
 	/*padding-bottom: 0;*/ /* removes global style */
 }
 
@@ -505,7 +517,7 @@ li .scroll {
 	color: #FFF;
 }
 
-// a is any link (including ones w/o an href)
+/* a is any link (including ones w/o an href) */
 nav li a {
 	display:block;
 	padding-left:15px;
@@ -515,7 +527,7 @@ nav li a {
 	cursor: pointer;
 }
 
-// a:link is a link with an href
+/* a:link is a link with an href */
 nav a:link,
 nav a:visited {
 	text-decoration:none;
@@ -527,6 +539,7 @@ nav a:hover,
 nav a:focus {
 	text-decoration:underline;
 }
+/*** END MOBILE MAIN NAV ***/
 
 /*** COLLAPSE NAVS ***/
 .nav-sub-mixin {
@@ -550,13 +563,12 @@ nav a:focus {
 	}
 	
 	 /*** jQuery ACTIVE STATE ***/
-	// & li .selected-item {
+	/* & li .selected-item { */
 	& .selected-item {
 	  display: block;
 	  color: #FFF;
 	  text-decoration:underline;
 	}
-
 }
 
 .nav-collapse-mixin {
@@ -577,7 +589,8 @@ nav a:focus {
 #nav-sub-major-exploration,
 #nav-sub-homeconnect,
 #nav-sub-giddy-throng,
-#nav-sub-earthship-seattle {
+#nav-sub-earthship-seattle,
+#nav-sub-joemicheals {
 	.nav-sub-mixin;		
 }
 
@@ -588,7 +601,8 @@ nav a:focus {
 #nav-collapse-major-exploration,
 #nav-collapse-homeconnect,
 #nav-collapse-giddy-throng,
-#nav-collapse-earthship-seattle  {	
+#nav-collapse-earthship-seattle,
+#nav-collapse-joemicheals  {	
 	.nav-collapse-mixin;
 }
 /*** END COLLAPSE NAVS ***/
@@ -597,10 +611,6 @@ nav a:focus {
 form {
 	font-size:125%;	
 }
-
-/*label, input, p, textarea {*/
-	/*border:1px solid red;*/
-/*}*/
 
 label {
 	margin-bottom:.75%;	
@@ -665,7 +675,7 @@ fieldset {
 /*** MOBILE FONTS ***/
 /*** END MOBILE FONTS ***/
 
-/* PROJECT_DETAILS */
+/*** PROJECT_DETAILS ***/
 .project_details_img_large {
 	display:block;	
 }
@@ -681,7 +691,7 @@ fieldset {
 .project_details_img.no-border {
 	border:none;
 }
-/* END PROJECT_DETAILS */
+/*** END PROJECT_DETAILS ***/
 
 /*** IFRAME ***/
 .iframe-wrapper {
@@ -702,17 +712,10 @@ iframe {
 	top:0;
 	left:0;
 }
-/*** END IFRAME ***/
 
+/* to change iframe cover image */
 #play {
 	position:absolute;
 	z-index:100;	
 }
-
-#maru {
-	z-index:1;	
-}
-
-//.first {
-//	background:pink;
-//}
+/*** END IFRAME ***/
