--- a/css/mobile.less
+++ b/css/mobile.less
@@ -211,20 +211,21 @@ ul li ul {
 .contact-icons {
 	float:right;
 	/*width:29.16666667%;*/
-	width: 55px;
+	max-width: 90px;
+	width:25%;
 	display:inline-block;
-	margin-top:5px;
+	margin-top:10px;
 }
 
-i.icon-email {
+i.icon-github {
 	float:left;
-	font-size:1.4em;	
+	font-size: 40px;	
 }
 
 i.icon-linkedin {
 	float:right;	
 	/*width:42.85714286%;*/
-	font-size:1.4em;	
+	font-size: 40px;	
 }
 /*** END CONTACT ICONS ***/
 
@@ -381,7 +382,8 @@ header#header-joemicheals {
    position: relative;
    top: 15px;
    padding: 5px 5px 5px 5px;
-   background: #000;
+   background-color: rgba(0, 0, 0, 0.8);
+   /*box-shadow: 2px 2px 2px #333;*/ /* horizontal, vertical, blur, color */
 }
 
 .yellow-flair {
@@ -714,8 +716,8 @@ iframe {
 }
 
 /* to change iframe cover image */
-#play {
+/*#play {
 	position:absolute;
 	z-index:100;	
-}
+}*/
 /*** END IFRAME ***/
