--- a/css/768.less
+++ b/css/768.less
@@ -16,11 +16,11 @@
 	float: right;
 	width: 110px;
 	position: relative; /* positions relative to normal position */
-	top:20px;
+	top:25px;
 	margin-top:0;
 }
 
-i.icon-email,
+i.icon-github,
 i.icon-linkedin {
 	font-size:50px;	
 }
