--- a/css/480.less
+++ b/css/480.less
@@ -240,21 +240,21 @@ i.icon-linkedin {
 
 /*** ONE-PAGE NAV MAIN CONTROLS ***/
 .page {
-	position:absolute;
-	width:100%;
-	height:100%;
-	top:0;
-	left:0;	
-
-	/* min-height: 100vh; */
+	/*position:absolute;*/
+	/*width:100%;*/
+	/*height:100%;*/
+	/*top:0;*/
+	/*left:0;	*/
 }
 
 /* Thomas - makes pages stack instead of height: 100% */
-/*.page {
+.page {
 	position:relative;
-	min-height:100%;
-	margin-bottom: 3em;
-}*/
+	/*min-height:100%;*/
+	/*margin-bottom: 3em;*/
+	
+	min-height: 100vh;
+}
 
 nav {
 	position:fixed;
@@ -353,6 +353,7 @@ nav li a {
 	/*background:#FF1493;
 	color:#FFF;*/
 	top:0;	
+	clear:both;
 }
 
 .header-main {
