--- a/css/768.less
+++ b/css/768.less
@@ -1,3 +1,5 @@
+/***** STYLE SHEET FOR WIDTHS 768px - 1079px *****/
+
 /*** 800px Grid for development only ***/
 .page {
 	background-image: url("../images/bg-800px-grid-.png");
