--- a/css/1080.less
+++ b/css/1080.less
@@ -1,3 +1,6 @@
+/***** STYLE SHEET FOR 1080px WIDTH AND LARGER *****/
+
+/*** DEVELOPMENT ONLY ***/
 .page-body,
 #page-contact,
 #home-page-container,
@@ -9,35 +12,13 @@
 	background-repeat:repeat-y;
 	/*max-width:980px;*/
 }
+/*** END DEVELOPMENT ONLY ***/
 
-/*** HOME PAGE ***/
-.home-page-container {
-	margin-bottom:75px;	
-}
-
-.header-main {	
-	margin-bottom:75px;
-}
-
-.contact-icons {
-	float:right;
-	width:130px;
-}
-
-i.icon-github,
-i.icon-linkedin {
-	font-size:60px;
-}
-
-.header-main p {	
-	font-size:3em;
-}
-
+/*** GLOBAL ***/
 .max1260px {
 	max-width:1260px;
 	margin:auto;	
 }
-/*** END HOME PAGE ***/
 
 .project_details_img_large {
 	display:none;	
@@ -77,10 +58,45 @@ i.icon-linkedin {
 	font-size: 1.3em;
 	line-height:1.4em;
 }
+/*** END GLOBAL ***/
+
+/*** HOME PAGE ***/
+.home-page-container {
+	margin-bottom:75px;	
+}
+
+.header-main {	
+	margin-bottom:75px;
+}
+
+.contact-icons {
+	float:right;
+	width:130px;
+}
+
+i.icon-github,
+i.icon-linkedin {
+	font-size:60px;
+}
+
+.header-main p {	
+	font-size:3em;
+}
+/*** END HOME PAGE ***/
+
+header#reCreate {
+	/*background-color: #F4F7F8;*/
+	/*background-color: #040707;	*/
+}
+
+header#reCreate .max1260px {
+	background-color: #C9D5DB;	
+}
 
 #header-joemicheals h1 {
    font-size: 2.5em;
    width:820px;
    position: relative;
    top:20px;
+   margin-left: 0;
 }
