--- a/css/480.less
+++ b/css/480.less
@@ -194,7 +194,7 @@ h2 {
 	-webkit-border:  @outline-width @outline-style @color;
 	-ms-border:  @outline-width @outline-style @color;
 	border: @outline-width @outline-style @color;
-	overflow:hidden;
+	overflow: hidden;
 }
 /* END FUNCTIONS */
 
@@ -242,19 +242,8 @@ i.icon-linkedin {
 
 /*** ONE-PAGE NAV MAIN CONTROLS ***/
 .page {
-	/*position:absolute;*/
-	/*width:100%;*/
-	/*height:100%;*/
-	/*top:0;*/
-	/*left:0;	*/
-}
-
-/* Thomas - makes pages stack instead of height: 100% */
-.page {
 	position:relative;
-	/*min-height:100%;*/
 	/*margin-bottom: 3em;*/
-	
 	min-height: 100vh;
 }
 
@@ -375,10 +364,13 @@ nav li a {
 /*** PROJECT PAGE - ALL CIRCLE ICONS ***/
 /* THE PAGE ITSELF */
 #page-projects {
-	top:100%;
-	height:100%;
-	visibility:visible;
-	margin:auto;	
+	top: 100%;
+	height: 100%;
+	visibility: visible;
+	margin: auto;	
+	/* prevents horizontal scroll bar */
+	overflow-x: hidden;
+	/*overflow-y: scroll;*/
 }
 
 /* CIRCLE BEHAVIORS */
@@ -445,7 +437,7 @@ h2.cover {
 }
 
 #project1 {
-	/*margin-right:-1.5%;	*/
+	margin-right:-1.5%;	
 	position:relative;
 	/*background-color:@divColor;*/
 }
