Projects page improvements
overflow-y: hidden;

--- a/css/480.less
+++ b/css/480.less
@@ -365,12 +365,14 @@ nav li a {
 /* THE PAGE ITSELF */
 #page-projects {
 	top: 100%;
-	height: 100%;
+	/*height: 100%;*/
+	/*height: 100vh;*/
 	visibility: visible;
 	margin: auto;	
 	/* prevents horizontal scroll bar */
 	overflow-x: hidden;
-	/*overflow-y: scroll;*/
+	overflow-y: hidden;
+	clear: both;
 }
 
 /* CIRCLE BEHAVIORS */
