--- a/css/mobile.less
+++ b/css/mobile.less
@@ -278,13 +278,12 @@ h2 {
 }
 /* end numbering system - development only */
 
+.greyscale-circle-70,
+.color-circle-70,
+.greyscale-circle-140,
+.color-circle-140,
 .greyscale-circle,
-.greyscale-circle-140 {
-	display:none;	
-}
-
-.color-circle,
-.color-circle-140 {
+.color-circle  {
 	display:none;	
 }
 
@@ -316,7 +315,7 @@ header#header-nan img {
 }
 
 #trombone {
- 	background-image: url("../images/wavelength-gold-on-green-200x50px.png");
+ 	background-image: url("../images/random-trombone-200x50px-no-text.png");
  	background-repeat: repeat;
 }
 
